# airbnb-clone

./: .gitignore  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_experience_event_date_experience_is_public_and_more.py  0005_alter_experience_event_date.py
medias/: models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_video_experience.py  0003_alter_photo_file_alter_video_file.py  0004_alter_photo_room.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  mutations.py  queries.py  schema.py  serializers.py  test.txt  tests.py  types.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+11 files in other folders)
