[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["Kosto1221 <ostolany@gamil.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
pillow = "^11.0.0"
djangorestframework = "^3.15.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.255.0"}
strawberry-graphql-django = "^0.52.1"
pyjwt = "^2.10.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
